# ds_projects

distilbert_azure_kubernetes/: README.md
garbage_classification_resnet_cnn/: cnn tensorflow.ipynb  kmeans with 6 clusters.ipynb  knn, rf, other baselines.ipynb  resnet50 1.ipynb  resnet50 2.ipynb
nlp_emotion_cause_research/: [Analysis]_Analysis_Plots.ipynb  [Appendix] w266_project_dev_reccon.ipynb  [Bhat-Modi-Dataset]_RECCON_EDA.ipynb  [CandidateDataset]_EmoCause_EDA.ipynb  [CandidateDataset]_GoodNewsEveryone_EDA.ipynb  [DataExperiments]_Augmentation_EmoCause.ipynb  [DataExperiments]_Augmentation_GNE.ipynb  project_dev_gne.ipynb
nlp_emotion_cause_research/.ipynb_checkpoints/: [Bhat-Modi-Dataset]_RECCON_EDA-checkpoint.ipynb  [CandidateDataset]_EmoCause_EDA-checkpoint.ipynb  [CandidateDataset]_GoodNewsEveryone_EDA-checkpoint.ipynb  w266_project_dev_EmoCause-checkpoint.ipynb
nlp_emotion_cause_research/data/AugmentExperiments/: augment_1_emocause_random.csv  augment_2_emocause_r_balanced.csv  augment_2_gne_r_balanced.csv  augment_3_emocause_r_balanced_insert_delete.csv  augment_3_gne_r_bal_delins.csv  augment_4_emocause_w_gne_balanced.csv  augment_4_gne_w_emocause.csv
nlp_emotion_cause_research/data/EmoCause/: emocause_test_preprocessed.csv  emocause_train_preprocessed.csv  test.json  valid.json  (+1 more)
nlp_emotion_cause_research/model_deployment/ece_prediction_service/: main.py  pyproject.toml
nlp_emotion_cause_research/model_deployment/ece_prediction_service/service_types/: types.py
spark_databricks_flight_delay_model/: Turbulent Times Databricks Report Notebook.html
(+33 files in other folders)
